--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
 
+:root {
+  --color1: #001628;
+  --color2: #003552;
+  --color3: #005d86;
+  --color4: #008fc3;
+  --color5: #00ccff;
+}
 
 body {
   display: flex;
   height: 100%;
+  background-color: var(--color1);
+  color: var(--color5);
 }
 
 * {
@@ -40,11 +49,11 @@ body {
   text-transform: uppercase;
   letter-spacing: 3px;
   text-align: center;
-  color: #111;
+  color: var(--color5);
   font-weight: 800;
 }
 .txt1 {
-  color: #333;
+  color: var(--color4);
   font-size: 1.4rem;
   text-align: center;
   width: 100%;
@@ -52,8 +61,8 @@ body {
 }
 
 .btn {
-  background-color: #2f323a; /* Same as .main-menu background */
-  color: #fff;  /* Text color from variables */
+  background-color: var(--color2); /* Same as .main-menu background */
+  color: var(--color5);  /* Text color from variables */
   padding: 10px 20px;
   border-radius: 50px;       /* Rounded corners */
   text-decoration: none;
@@ -65,8 +74,8 @@ body {
 }
 
 .btn:hover {
-  background-color: var(--menu-item-hover-bg);
-  color: var(--menu-item-hover-color);
+  background-color: var(--color3);
+  color: var(--color1);
 }
 
 .tt2 {
@@ -78,12 +87,12 @@ body {
   text-align: center;
   margin-bottom: 1.5rem;
   position: relative;
-  color: #111;
+  color: var(--color5);
 }
 .tt2-sub {
   display: block;
   text-align: center;
-  color: #555;
+  color: var(--color3);
   font-size: 1.2rem;
   max-width: 50rem;
   margin: auto;
@@ -98,6 +107,7 @@ body {
   text-align: left;
   min-height: 20vh;
   margin-top: 40px;
+  
 }
 
 .about-content {
@@ -115,7 +125,7 @@ body {
   font-size: 1.2rem;
   text-transform: uppercase;
   text-align: left;
-  color: #111;
+  color: var(--color5);
   font-weight: 800;
   margin-bottom: 1rem;
 }
@@ -153,7 +163,7 @@ body {
 
 .about-text p {
   font-size: 1rem;
-  color: #333;
+  color: var(--color3);
   margin-bottom: 15px;
   line-height: 1.6;
 }
@@ -165,7 +175,7 @@ body {
 
 .skills-content h3 {
   font-size: 1.5rem;
-  color: #111;
+  color: var(--color5);
   margin-bottom: 20px;
   text-align: left;
 }
@@ -185,13 +195,13 @@ body {
 
 .skill i {
   font-size: 3rem;
-  color: #2f323a; /* Icon color */
+  color: var(--color2); /* Icon color */
   margin-bottom: 10px;
 }
 
 .skill span {
   font-size: 1rem;
-  color: #333;
+  color: var(--color5);
 }
 
 /* Responsive Design */
@@ -213,7 +223,7 @@ body {
 
 #projects {
   padding: 30px 85px;
-  background-color: #00000009;
+  
   margin: 150px;
   
 }
@@ -228,8 +238,8 @@ body {
 }
 
 .project-card {
-  background-color: #fff;
-  border: 1px solid #ddd;
+  background-color: var(--color2);
+  border: 1px solid var(--color3);
   border-radius: 8px;
   width: calc(50% - 20px); /* Cambia el ancho para que ocupe el 50% del contenedor */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -254,7 +264,7 @@ body {
 
 .project-description p {
   margin-bottom: 15px;
-  color: #333;
+  color: var(--color5);
 }
 
 @media (max-width: 992px) {
@@ -274,29 +284,30 @@ body {
   width: 100%;
   margin: 10;
   padding: 20px;
-  background-color: #fff;
-  border: 1px solid #ddd;
+  background-color: var(--color2);
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin-top: 20px auto;
 }
 
 .contact-form .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 5px;
+  padding: 5px 50px;
 }
 
 .contact-form label {
   font-size: 1rem;
-  margin: 50px 0 0 0; /* Elimina márgenes laterales y mantiene el margen inferior */
   font-weight: 600;
-  color: #333;
+  margin: 0; /* Elimina márgenes laterales y mantiene el margen inferior */
+  padding-bottom: 10px;
+  color: var(--color5);
 }
 
 .contact-form input,
 .contact-form textarea {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--color3);
   border-radius: 4px;
   font-family: "Lexend Deca", sans-serif;
   font-size: 1rem;
@@ -304,7 +315,7 @@ body {
 
 .contact-form input:focus,
 .contact-form textarea:focus {
-  border-color: #2f323a;
+  border-color: var(--color4);
   outline: none;
 }
 
@@ -312,6 +323,7 @@ body {
   width: 100%;
   text-align: center;
 }
+
 
 .main-menu {
   position: fixed;
@@ -324,21 +336,12 @@ body {
   align-items: center;
   padding-top: 15px;
   border-radius: 100px; /* Bordes redondeados en la derecha */
-  background-color: #2f323a;
+  background-color: #003552;
 }
 
-/* Color Variables */
-:root {
-  --text-color: #fff;
-  --menu-item-color: rgb(188, 186, 186);
-  --menu-item-hover-bg: rgb(117, 109, 109);
-  --menu-item-hover-color: #fff;
-  --menu-header-color: rgb(137, 135, 135);
-  --tooltip-bg: rgba(0, 0, 0, 0.8);
-  --border-color: rgb(218, 147, 147);
-}
+
 .main-menu .menu-item a i {
-  color: #ffffff83;
+  color: var(--color5);
 }
 
 .logo,
@@ -377,7 +380,7 @@ body {
 }
 
 .menu-header {
-  color: var(--menu-header-color);
+  color: var(--color4);
   text-transform: uppercase;
   text-align: center;
   font-size: 16px;
@@ -388,15 +391,15 @@ body {
   cursor: pointer;
   padding: 10px 20px;
   border-radius: 50px;
-  color: var(--menu-item-color);
+  color: var(--color5);
   transition: all 0.5 ease;
 }
 
 .menu-item:hover,
 .nav-active,
 .logout:hover {
-  background: var(--menu-item-hover-bg);
-  color: var(--menu-item-hover-color);
+  background: var(--color1);
+  color: var(--color1);
   transition: 0.5s ease;
 }
 
@@ -416,7 +419,7 @@ body {
   left: 120%;
   top: 50%;
   transform: translateY(-50%);
-  background-color: var(--tooltip-bg);
+  background-color: var(--color3);
   padding: 5px 10px;
   border-radius: 5px;
   font-size: 20px;
@@ -434,7 +437,7 @@ body {
   transform: translateY(-50%);
   border-width: 5px;
   border-style: solid;
-  border-color: transparent var(--tooltip-bg) transparent transparent;
+  border-color: transparent var(--color3) transparent transparent;
   opacity: 0;
   transition: opacity 0.5s ease;
 }
